--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Cambo&family=Outfit:wght@600&family=Playfair+Display&display=swap");
 
-* {
+body {
   font-family: "Cambo", serif;
 
   font-family: "Outfit", sans-serif;
 
   font-family: "Playfair Display", serif;
+}
+
+h1 {
+  font-weight: 200;
 }
