--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Cambo&family=Outfit:wght@600&family=Playfair+Display&display=swap"
         rel="stylesheet">
+
 
     <title>{% block title%}My Blog{% endblock title%}</title>
     <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css">
@@ -50,6 +53,10 @@
 
                     </li>
                     {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'password_reset' %}">Password reset </a>
+
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Log in </a>
 
