--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,7 +3,7 @@
 {% block title %} Success {% endblock title %}
 
 {% block content %}
-<h1> Success </h1>
+<h1> Success! </h1>
 <p> Your password has been changed</p>
 click <a href="{% url 'post_list' %}">Here</a> to go back to the list of post
 
