--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,18 +1,18 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %} Change password {% endblock title %}
+{% block title %} Password rest {% endblock title%}
 
 {% block content%}
 <div class="container" style="padding:6px;">
     <div class="row">
         <div class="col-md-8">
-            <h1> Change your password</h1>
-            <p> enter your password, for security's sake then choose a new password</p>
+            <h1> Password reset </h1>
+            <p> Enter your email to reset your password</p>
             <form method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
-                <input type="submit" class="btn btn-success" vaule="Change">
+                <input type="submit" class="btn btn-success" value="Change" style="margin-top: 5px;">
             </form>
         </div>
     </div>
