--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -3,8 +3,15 @@
 {% block title %} {{post.title}} {% endblock title%}
 
 {% block content%}
-<h1> {{post.title}} </h1>
-<p><strong> Created on: {{ post.created_on }} {{ post.author }}</strong></p>
+<h1> {{ post.title }} </h1>
+<p><strong> Created on: {{ post.created_on }} By: {{ post.author }}</strong></p>
 <p>{{ post.body}} </p>
-<a href="{% url 'post_list' %}"> back to all post</a>
+{% if user.is_authenticated %}
+<a href="{% url 'post_edit' post.id %}" class="btn btn-warning">
+    Edit
+</a>
+<a href="{% url 'post_delete' post.id %}" class="btn btn-danger">
+    Delete
+</a>
+{% endif %}
 {% endblock content%}
